--- a/src/app/employee-modal/employee-modal.component.html
+++ b/src/app/employee-modal/employee-modal.component.html
@@ -50,6 +50,37 @@
           </div>
         </div>
 
+        <div class="mb-2">
+          <input
+            type="number"
+            name="age"
+            [(ngModel)]="employee.age"
+            required
+            min="0"
+            class="form-control"
+            placeholder="Age"
+            #age="ngModel"
+          />
+          <div *ngIf="age.invalid && age.touched" class="text-danger">
+            Enter a valid age.
+          </div>
+        </div>
+
+        <div class="mb-2">
+          <input
+            type="text"
+            name="gender"
+            [(ngModel)]="employee.gender"
+            required
+            class="form-control"
+            placeholder="Gender"
+            #gender="ngModel"
+          />
+          <div *ngIf="gender.invalid && gender.touched" class="text-danger">
+            Gender is required.
+          </div>
+        </div>
+
         <div class="text-end">
           <button type="button" class="btn btn-secondary me-2" (click)="cancel(false)">Cancel</button>
           <button type="submit" class="btn btn-success" [disabled]="editForm.invalid">
