--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,9 +11,15 @@
                             Welcome! {{loggInUser?.username}}
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="javascript:void(0)" (click)="gotoEmployeeMaster()">Employee Master</a></li>
-                            <li><a class="dropdown-item" href="javascript:void(0)" (click)="gotoAgGridLib()">AG Grid Lib</a></li>
-                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="javascript:void(0)"
+                                    (click)="gotoEmployeeMaster()">Employee Master</a></li>
+                            <li><a class="dropdown-item" href="javascript:void(0)" (click)="gotoAgGridLib()">AG Grid
+                                    Lib</a></li>
+                            <li><a class="dropdown-item" href="javascript:void(0)" (click)="gotoAddEmployee()">Add
+                                    Employee</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
                             <li><a class="dropdown-item" href="javascript:void(0)" (click)="logOut()">Logout</a></li>
                         </ul>
                     </li>
@@ -46,10 +52,17 @@
                                 Welcome! {{loggInUser?.username}}
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" href="javascript:void(0)" (click)="gotoEmployeeMaster()">Employee Master</a></li>
-                                <li><a class="dropdown-item" href="javascript:void(0)" (click)="gotoAgGridLib()">AG Grid Lib</a></li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="javascript:void(0)" (click)="logOut()">Logout</a></li>
+                                <li><a class="dropdown-item" href="javascript:void(0)"
+                                        (click)="gotoEmployeeMaster()">Employee Master</a></li>
+                                <li><a class="dropdown-item" href="javascript:void(0)" (click)="gotoAgGridLib()">AG Grid
+                                        Lib</a></li>
+                                <li><a class="dropdown-item" href="javascript:void(0)" (click)="gotoAddEmployee()">Add
+                                        Employee</a></li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li><a class="dropdown-item" href="javascript:void(0)" (click)="logOut()">Logout</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
