--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,3 @@
 @import 'ag-grid-community/styles/ag-grid.css';
 @import 'ag-grid-community/styles/ag-theme-alpine.css';
+@import '@ng-select/ng-select/themes/default.theme.css';
