fixed username on header issue

--- a/src/app/add-employee/add-employee.component.html
+++ b/src/app/add-employee/add-employee.component.html
@@ -1,14 +1,8 @@
-<ag-grid-angular class="ag-theme-alpine" style="height: 50vh; width: 100%;" 
-[rowData]="employees"
-[columnDefs]="columnDefs"
-[defaultColDef]="defaultColDef"
-[pagination]="true"
-(cellClicked)="onCellClicked($event)">
+<ag-grid-angular class="ag-theme-alpine" style="height: 60vh; width: 100%;" [rowData]="employees"
+    [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [pagination]="true" (cellClicked)="onCellClicked($event)">
 </ag-grid-angular>
 
-<div class="d-flex mt-3">
-    <button class="btn btn-primary" (click)="openModal()">Add Employee</button>
-</div>
+<button class="btn btn-secondary mt-3" *ngIf="isAdmin" (click)="openModal()">Add Employee</button>
 
 <div class="modal fade show d-block" tabindex="-1" *ngIf="showModal">
     <div class="modal-dialog">
@@ -17,13 +11,21 @@
 
             <form [formGroup]="addEmployeeForm" (ngSubmit)="onSubmit()">
                 <input formControlName="name" class="form-control my-2" placeholder="Name" />
-                <div class="text-danger" *ngIf="addEmployeeForm.get('name')?.touched && addEmployeeForm.get('name')?.invalid">
+                <div class="text-danger"
+                    *ngIf="addEmployeeForm.get('name')?.touched && addEmployeeForm.get('name')?.invalid">
                     Name is required and should be alphabetic.
                 </div>
 
                 <input formControlName="age" class="form-control my-2" placeholder="Age" />
-                <div class="text-danger" *ngIf="addEmployeeForm.get('age')?.touched && addEmployeeForm.get('age')?.invalid">
+                <div class="text-danger"
+                    *ngIf="addEmployeeForm.get('age')?.touched && addEmployeeForm.get('age')?.invalid">
                     Age is required and must be numeric.
+                </div>
+
+                <input formControlName="salary" class="form-control my-2" placeholder="Salary" />
+                <div class="text-danger"
+                    *ngIf="addEmployeeForm.get('salary')?.touched && addEmployeeForm.get('salary')?.invalid">
+                    Salary is required and must be numeric.
                 </div>
 
                 <ng-select formControlName="department" [items]="departments" bindLabel="label" bindValue="value"
@@ -54,7 +56,7 @@
 
                 <div class="text-end mt-3">
                     <button type="button" class="btn btn-secondary me-2" (click)="closeModal()">Cancel</button>
-                    <button type="submit" class="btn btn-primary">Save</button>
+                    <button type="submit" class="btn btn-primary" [disabled]="addEmployeeForm.invalid">Save</button>
                 </div>
             </form>
         </div>
